--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,64 @@
-# Compiled class file
-*.class
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Log file
+# Production builds
+/frontend/build
+/frontend/dist
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
 *.log
 
-# BlueJ files
-*.ctxt
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Coverage directory used by tools like istanbul
+coverage/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Maven
+/backend/target/
+/backend/.mvn/wrapper/maven-wrapper.jar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Spring Boot
+/backend/application-*.yml
+!/backend/application.yml
+
+# Docker
+.dockerignore
+
+# Database
+*.db
+*.sqlite
+
+# Temporary files
+tmp/
+temp/
