--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -54,9 +54,8 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-spring-boot-starter</artifactId>
-            <version>5.15.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-neo4j</artifactId>
         </dependency>
 
         <!-- Redis -->
@@ -145,6 +144,12 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>neo4j</artifactId>
             <scope>test</scope>
+        </dependency>
+        
+        <!-- Additional Dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
