--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,31 +3,32 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "ajv": "^8.17.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "d3": "^7.8.5",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^3.5.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "react-query": "^3.39.3",
-    "react-flow-renderer": "^10.3.17",
-    "d3": "^7.8.5",
-    "@types/d3": "^7.4.3",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.294.0",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0",
-    "socket.io-client": "^4.7.4"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
+    "reactflow": "^11.10.1",
+    "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.4",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
