resolving errors from frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,11 +70,13 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - REACT_APP_API_URL=http://localhost:8080/api
     container_name: vamsasetu-frontend
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:8080/api
+      - NODE_ENV=production
     depends_on:
       - backend
     networks:
