--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,10 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
+# Accept API URL at build time for CRA
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
 # Install dependencies
 RUN npm install --legacy-peer-deps
 
