--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.5.11</version>
         <relativePath/>
     </parent>
     <groupId>com.vamsasetu</groupId>
@@ -100,6 +100,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.16.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -146,11 +147,8 @@
             <scope>test</scope>
         </dependency>
         
-        <!-- Additional Dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+    <!-- Additional Dependencies -->
+    <!-- Removed duplicate spring-boot-starter-data-jpa entry (already declared above) -->
     </dependencies>
 
     <build>
