--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
