--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
 server:
   port: ${SERVER_PORT:8080}
 jwt:
